--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 chrono = "0.4"
 sha2 = "0.10.2"
 bincode = "1.3.3"
-serde = "1.0.136"
+serde = { version = "1.0.136", features = ["derive"] }
